# blob_tracking

./: CMakeLists.txt  package.xml  setup.py
data/: camera_param_baxter.xml
launch/: blob_tracking.launch  point_transformer.launch  test_code.launch
launch/params/: global_params.yml
scripts/: ball_tracking_ros.py  balltraj.py  filternew_secondorder.py  ros_traj.py
src/: blob_tracking.cpp  conversions_frames_angles.cpp  points_transformer.cpp  test_code.cpp
